--- a/index.html
+++ b/index.html
@@ -17,36 +17,39 @@
     <div id="bodyBanner" class="container-fluid">
         <div class="row">
             <div class="col">
-                  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+                <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <p id="ukcilogo">UKCI / 
-                            <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University"> </p>
+                            <p id="ukcilogo">UKCI /
+                                <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                            </p>
                         </a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="navbar-toggler-icon"></i>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="./about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./submissions.html">Submissions</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./programme.html">Programme</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./venue.html">Venue</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
-                      </div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <i class="navbar-toggler-icon"></i>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./about.html">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./submissions.html">Submissions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./programme.html">Programme</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./venue.html">Venue</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                  </nav>
+                </nav>
             </div>
         </div>
         <div id="ukcibanner" class="row">
@@ -61,10 +64,14 @@
         <br>
         <div class="row">
             <div class="col-sm-12 col-lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
+                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
+                    consequuntur possimus fuga doloremque.</p>
             </div>
             <div class="col-sm-12 col-lg-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis consequuntur possimus fuga doloremque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
+                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
+                    consequuntur possimus fuga doloremque.</p>
             </div>
         </div>
     </div>
@@ -106,7 +113,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    
+
     <script src="./script.js"></script>
 </body>
 
