--- a/submissions.html
+++ b/submissions.html
@@ -30,28 +30,16 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./registration.html">Registration</a>
+                                    <a class="nav-link" href="./about.html">About</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./submissions.html">Submissions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./about.html">Committee</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" href="./programme.html">Programme</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Logistics
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
-                                        <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
-                                    </ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./venue.html">Venue</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -69,26 +57,28 @@
                             6th - 8th September
                         </div>
                         <div class="subnavlink col-lg-4 col-sm-12">
-                            Ulster University, Belfast, Northern Ireland
+                            @Ulster University, Belfast
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 
     <div id="bodyContent" class="container-fluid">
-        <div class="row gy-3">
-            <h2>Submissions (TBC)</h2>
-            <hr>
-            <br>
-            <div class="col-sm-12 col-lg-12">
-                <div class="card">
-                    <div class="card-body registrationbody">
-                        <p>The UKCI Conference 2024 Submission Portal will be available once registration opens on
-                            <strong>20th May 2024</strong></p>
-                    </div>
-                </div>
+        <h2>Submissions</h2>
+        <br>
+        <div class="row">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
+                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
+                    consequuntur possimus fuga doloremque.</p>
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta ea, et, vitae voluptate quia nulla
+                    officiis repudiandae placeat pariatur quidem inventore alias nemo quaerat. Eum blanditiis
+                    consequuntur possimus fuga doloremque.</p>
             </div>
         </div>
     </div>
@@ -104,30 +94,18 @@
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="./registration.html">Registration</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./submissions.html">Submissions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">Committee</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="./programme.html">Programme</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Logistics
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
-                            <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./venue.html">Venue</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
